released 1.2 version